# P4-labs

./: .gitignore  README.md
lab0/: .clang-format  CMakeLists.txt  Makefile  ejemplo_main_2025.cpp
lab0/include/: Articulo.h  ArticuloRevista.h  DTFecha.h  DTRefer.h  Investigador.h  Libro.h  PaginaWeb.h  Publicacion.h  Utils.h
lab0/src/: ArticuloRevista.cpp  DTFecha.cpp  DTRefer.cpp  Investigador.cpp  Libro.cpp  PaginaWeb.cpp  Publicacion.cpp
